# benchmarker

./: .gitignore  DOCS.md  PLANS.md  README.md  judge.json  params.yaml  pyproject.toml  tests.json
quick_run/: params.yaml  tests.json
src/benchmarker/: __init__.py  circuit_breaker.py  cli.py  client.py  config.py  eval_file.py  evaluator.py  importer.py  judge.py  logging.py  optimizer_history.py  optimizers.py  param_validation.py  parse_judge.py  runner.py
src/benchmarker/defaults/: __init__.py  params.default.yaml  tests.default.json
src/benchmarker/defaults/benchmarks/: api-integration.yaml  bug-fixing.yaml  code-generation.yaml  comment-generation.yaml  general.yaml  refactoring.yaml  security-vulnerability.yaml  test-generation.yaml
src/benchmarker/defaults/benchmarks/api-integration/: 001-fetch-json.json
src/benchmarker/defaults/benchmarks/bug-fixing/: 001-logic-error.json
src/benchmarker/defaults/benchmarks/code-generation/: 001-chunk-seq.json  002-palindrome.json  003-twosum.json  004-bst.json
src/benchmarker/defaults/benchmarks/comment-generation/: 001-complexity.json
src/benchmarker/defaults/benchmarks/general/: 001-creative.json  002-reasoning.json  003-factual.json
src/benchmarker/defaults/benchmarks/refactoring/: 001-type-hints.json
tests/: test_cli.py  test_client.py  test_config.py  test_defaults.py  test_eval_file.py  test_evaluator.py  test_importer.py  test_integration.py  test_judge.py  test_optimizers.py  test_param_validation.py  test_parse_judge.py  test_runner.py
(+2 files in other folders)
